--- a/assets/less/normalize.less
+++ b/assets/less/normalize.less
@@ -6,16 +6,15 @@
  * @since 1.0
  */
 
-/* Box sizing to make life easier with % layouts */
+// Box sizing to make life easier with % layouts
+
 *{ 
    -webkit-box-sizing: border-box; 
    -moz-box-sizing: border-box; 
    box-sizing: border-box; 
 }
 
-/*
- * Corrects `block` display not defined in IE6/7/8/9 & FF3.
- */
+// Corrects `block` display not defined in IE6/7/8/9 & FF3.
 
 article,
 aside,
