--- a/assets/less/normalize-baseline.less
+++ b/assets/less/normalize-baseline.less
@@ -447,6 +447,8 @@ nav ul,
 nav ol {
     list-style: none;
     list-style-image: none;
+    margin:0;
+    padding:0;
 }
 
 /* ==========================================================================
