Finishing off styles and adding jquery picture

--- a/assets/less/grid.less
+++ b/assets/less/grid.less
@@ -5,7 +5,7 @@
  * 
  * This is heavily infleuenced by the Semantic Grid http://semantic.gs
  *
- * @since 1.0
+ * @version 1.0
  */
 
 /* Utility variable — you should never need to modify this */
