--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,8 @@ nav ul,nav ol{list-style:none;list-style-image:none;margin:0;padding:0;}
 img{border:0;-ms-interpolation-mode:bicubic;}
 svg:not(:root){overflow:hidden;}
 figure{margin:0;}
+figure img{width:100%;height:auto;display:block;}
+figcaption{font-size:small;font-style:italic;color:#666666;}
 form{margin:0;}
 fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em;}
 legend{border:0;padding:0;white-space:normal;*margin-left:-7px;}
@@ -65,6 +67,20 @@ input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-w
 input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}
 button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
 textarea{overflow:auto;vertical-align:top;}
+form{margin-bottom:1.5em;}
+form ul{list-style-type:none;list-style-image:none;margin:0;padding:0;}form ul li{*zoom:1;margin-bottom:1.5em;}form ul li:before,form ul li:after{content:"";display:table;}
+form ul li:after{clear:both;}
+fieldset{margin:0;padding:1.5em;}
+label{display:block;}
+label.inline{display:inline;padding-right:24px;}
+input:focus,textarea:focus,select:focus{outline:0px;-webkit-box-shadow:0px 0px 5px rgba(0, 0, 0, 0.3);-moz-box-shadow:0px 0px 5px rgba(0, 0, 0, 0.3);-ms-box-shadow:0px 0px 5px rgba(0, 0, 0, 0.3);box-shadow:0px 0px 5px rgba(0, 0, 0, 0.3);}
+input[type="text"],input[type="url"],input[type="email"],input[type="number"],input[type="date"],input[type="month"],input[type="week"],input[type="time"],input[type="datetime-local"],input[type="telephone"],textarea{display:block;width:100%;margin:0 0 0.75em;padding:0.3em;border:1px solid #cccccc;line-height:1.5em;font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Sans-Serif;}
+select{width:100%;height:2.1em;margin-bottom:0.9em;border:1px solid #cccccc;font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Sans-Serif;}
+input[type="range"],input[type="color"]{vertical-align:middle;height:1.5em;width:100%;font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Sans-Serif;}
+input[type="range"]{height:1.4em;}
+input[type="color"]{width:1.5em;font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Sans-Serif;}
+progress,meter{display:block;width:100%;height:1.5em;}
+input[type="submit"],input[type="button"]{border:1px solid #cccccc;background:#ddd;padding:0.7em 2em;margin:0 20px 0 0;font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Sans-Serif;line-height:1.5em;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;border-radius:3px;}
 table{border-collapse:collapse;border-spacing:0;margin-bottom:1.4em;width:100%;border:1px solid #cccccc;}
 thead{text-align:left;font-weight:bold;}
 tbody tr:nth-child(even) td{background:#dddddd;}
@@ -85,8 +101,9 @@ header#worlds_birth>div nav ul li{-webkit-box-sizing:border-box;-moz-box-sizing:
 #content>div>section{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:66.66666666666666%;padding:0 20px;*width:61.706349206349195%;*padding:0 19.950396825396826px;}
 #content>div>aside{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:33.33333333333333%;padding:0 20px;*width:28.373015873015873%;*padding:0 19.950396825396826px;}#content>div>aside>div:last-child p{margin-bottom:0;}
 #content>div>aside>div:last-child div:last-child p{margin-bottom:1.5em;}
-#content>div>div{clear:both;}#content>div>div section{background:#ccc;}#content>div>div section div{background:#eee;height:3em;margin-bottom:1.5em;border:20px solid #dddddd;border-top:0;border-bottom:0;}
-#content>div>div section div:first-child{background:#6bac60;}
+#content>div>div{clear:both;}#content>div>div>div{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:100%;padding:0 20px;*width:95.03968253968253%;*padding:0 19.950396825396826px;}
+#content>div>div section{background:#ccc;}#content>div>div section div{background:#6bac60;height:3em;margin-bottom:1.5em;border:20px solid #dddddd;border-top:0;border-bottom:0;}
+#content>div>div section#one div:last-child,#content>div>div section#two div:last-child,#content>div>div section#three div:last-child,#content>div>div section#four div:last-child,#content>div>div section#five div:last-child,#content>div>div section#six div:last-child,#content>div>div section#seven div:last-child,#content>div>div section#eight div:last-child,#content>div>div section#nine div:last-child,#content>div>div section#ten div:last-child,#content>div>div section#eleven div:last-child{background:#eee;}
 #content>div>div section#one>div:first-child{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:8.333333333333332%;padding:0 20px;*width:3.373015873015873%;*padding:0 19.950396825396826px;}
 #content>div>div section#one>div:last-child{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:91.66666666666666%;padding:0 20px;*width:86.7063492063492%;*padding:0 19.950396825396826px;}
 #content>div>div section#two>div:first-child{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:16.666666666666664%;padding:0 20px;*width:11.706349206349206%;*padding:0 19.950396825396826px;}
@@ -109,4 +126,8 @@ header#worlds_birth>div nav ul li{-webkit-box-sizing:border-box;-moz-box-sizing:
 #content>div>div section#ten>div:last-child{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:16.666666666666664%;padding:0 20px;*width:11.706349206349206%;*padding:0 19.950396825396826px;}
 #content>div>div section#eleven>div:first-child{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:91.66666666666666%;padding:0 20px;*width:86.7063492063492%;*padding:0 19.950396825396826px;}
 #content>div>div section#eleven>div:last-child{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:8.333333333333332%;padding:0 20px;*width:3.373015873015873%;*padding:0 19.950396825396826px;}
+#content>div>div section#thirds>div{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:33.33333333333333%;padding:0 20px;*width:28.373015873015873%;*padding:0 19.950396825396826px;}
+#content>div>div section#quarters>div{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:25%;padding:0 20px;*width:20.03968253968254%;*padding:0 19.950396825396826px;}
+#content>div>div section#sixths>div{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:16.666666666666664%;padding:0 20px;*width:11.706349206349206%;*padding:0 19.950396825396826px;}
+#content>div>div section#twelfths>div{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:8.333333333333332%;padding:0 20px;*width:3.373015873015873%;*padding:0 19.950396825396826px;}
 @media screen and (max-width:750px){#content>div>section{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:100%;padding:0 20px;*width:95.03968253968253%;*padding:0 19.950396825396826px;} #content>div>aside{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:100%;padding:0 0;*width:95.03968253968253%;*padding:0 -0.0496031746031746px;}#content>div>aside>h2{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:100%;padding:0 20px;*width:95.03968253968253%;*padding:0 19.950396825396826px;padding-top:0.25em;margin-bottom:0.5em;} #content>div>aside div#lists>div{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:33.33333333333333%;padding:0 20px;*width:28.373015873015873%;*padding:0 19.950396825396826px;} #content>div>aside div#lists ul,#content>div>aside div#lists ol{padding-left:10%;} #content>div>aside>div:last-child{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:100%;padding:0 0;*width:95.03968253968253%;*padding:0 -0.0496031746031746px;}#content>div>aside>div:last-child>h2{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:100%;padding:0 20px;*width:95.03968253968253%;*padding:0 19.950396825396826px;padding-top:0.25em;margin-bottom:0.5em;} #content>div>aside>div:last-child>div{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:50%;padding:0 20px;*width:45.03968253968254%;*padding:0 19.950396825396826px;}}@media screen and (max-width:520px){#content>div>aside div#lists>div{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:100%;padding:0 20px;*width:95.03968253968253%;*padding:0 19.950396825396826px;} #content>div>aside>div:last-child>h2{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:100%;padding:0 20px;*width:95.03968253968253%;*padding:0 19.950396825396826px;padding-top:0.25em;margin-bottom:0.5em;} #content>div>aside>div:last-child>div{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:inline;float:left;width:100%;padding:0 20px;*width:95.03968253968253%;*padding:0 19.950396825396826px;} #content>div>aside>div:last-child p{margin-bottom:0;} #content>div>aside>div:last-child div:last-child p{margin-bottom:1.5em;}}
