--- a/assets/less/normalize-baseline.less
+++ b/assets/less/normalize-baseline.less
@@ -6,7 +6,7 @@
  *
  * Adapted from http://github.com/necolas/normalize.css
  *
- * @since 1.0
+ * @version 1.0
  */
 
 // Box sizing to make life easier with % layouts
@@ -486,6 +486,25 @@ figure {
     margin: 0;
 }
 
+/*
+ * Make images responsive
+ */
+figure img{
+    width: 100%;
+    height: auto;
+    display:block;
+}
+
+/*
+ * Figcaption styling
+ */
+figcaption{
+    font-size: small;
+    font-style:italic;
+    color:@grey_dark;
+}
+
+
 /* ==========================================================================
    Forms
    ========================================================================== */
@@ -630,6 +649,111 @@ input::-moz-focus-inner {
 textarea {
     overflow: auto; /* 1 */
     vertical-align: top; /* 2 */
+}
+
+/*
+ * Some base styling for forms.
+ */
+form{
+    margin-bottom:1.5em;
+}
+form ul{
+    list-style-type:none;
+    list-style-image:none;
+    margin:0;
+    padding:0;
+    li{
+        .grid-clearfix();
+        margin-bottom:1.5em;
+    }
+}
+
+fieldset{
+    margin:0;
+    padding:1.5em;
+}
+
+label{
+    display:block;
+}
+label.inline{
+    display:inline;
+    padding-right: 24px;
+}
+input,
+textarea,
+select{
+    &:focus{
+        outline: 0px;
+        -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+        -ms-box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+        box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+    }
+}
+
+input[type="text"],
+input[type="url"],
+input[type="email"],
+input[type="number"],
+input[type="date"],
+input[type="month"],
+input[type="week"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="telephone"],
+textarea{
+    display:block;
+    width: 100%;
+    margin:0 0 0.75em;
+    padding: 0.3em;
+    border:1px solid @grey_regular;
+    line-height: 1.5em;
+    font-family:@body_family;
+}
+
+select{
+    width: 100%;
+    height: 2.1em;
+    margin-bottom: 0.9em;
+    border:1px solid @grey_regular;
+    font-family:@body_family;
+}
+
+input[type="range"],
+input[type="color"]{
+    vertical-align:middle;
+    height: 1.5em;
+    width: 100%;
+    font-family:@body_family;
+}
+input[type="range"],{
+    height: 1.4em;
+}
+input[type="color"]{
+    width: 1.5em;
+    font-family:@body_family;
+}
+
+progress,
+meter{
+    display:block;
+    width: 100%;
+    height: 1.5em;
+}
+
+input[type="submit"],
+input[type="button"]{
+    border:1px solid @grey_regular;
+    background:#ddd;
+    padding: 0.7em 2em;
+    margin:0 20px 0 0;
+    font-family:@body_family;
+    line-height: 1.5em;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    border-radius: 3px;
 }
 
 /* ==========================================================================
