--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -205,6 +205,11 @@ header#worlds_birth{
 }
 
 
+/**
+ * NOTE
+ * Don't add breakpoints aimed at device pixel widths,
+ * add them where they suit best for your design. 
+ */
 @media screen and (max-width: 750px){
 	#content{
 		>div{
