--- a/assets/less/grid.less
+++ b/assets/less/grid.less
@@ -10,7 +10,7 @@
 
 /* Utility variable — you should never need to modify this */
 @gridsystem_width: @columns * 1px;
-@correction: 0.5 / @max_width * 100 * 1%;
+@correction: 0.5 / @max_width * 100 * 1%; // NOTE: CHeck this in IE
 
 /* The micro clearfix http://nicolasgallagher.com/micro-clearfix-hack */
 .grid-clearfix(){
@@ -30,7 +30,7 @@
 .border-box(){
 	-webkit-box-sizing: border-box; 
 	-moz-box-sizing: border-box; 
-	box-sizing: border-box; 
+	box-sizing: border-box; *behavior: url(/assets/js/libs/boxsizing.htc);
 }
 
 /* Our row container */
