--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -1,25 +1,24 @@
-/**
- * Grid
- *
- * Set up responsive grid system.
- * 
- * This is heavily infleuenced by the Semantic Grid http://semantic.gs
- *
- * @version 1.0
- */
+// * Grid
+// *
+// * Set up responsive grid system.
+// * 
+// * This is heavily infleuenced by the Semantic Grid http://semantic.gs
+// *
+// * @version 1.0
+// *
 
-/* Utility variable — you should never need to modify this */
+// Utility variable — you should never need to modify this
 $gridsystem_width: $columns * 1px;
 //$correction: 0.5 / $max_width * 100 * 1%; // NOTE: Check this in IE
 
-/* Ensure grid columns are set to border-boxes. This is essential */
+// Ensure grid columns are set to border-boxes. This is essential
 @mixin border-box(){
 	-webkit-box-sizing: border-box; 
 	-moz-box-sizing: border-box; 
 	box-sizing: border-box; *behavior: url(/assets/js/libs/boxsizing.htc);
 }
 
-/* Our row container */
+// Our row container
 @mixin row($padding:0){
 	@include grid-clearfix();
 	@include border-box();
@@ -30,7 +29,7 @@ $gridsystem_width: $columns * 1px;
 	padding:0 $padding;
 }
 
-/* Our column container */
+// Our column container
 @mixin column($x, $padding:($gutter_width*0.5), $columns:$columns){
 	@include border-box();
 
@@ -44,12 +43,12 @@ $gridsystem_width: $columns * 1px;
 	//*padding: 0 ($padding)-$correction;
 }
 
-/* Push adds left padding */
+// Push adds left padding
 @mixin push($offset:1) {
 	padding-left: 100%*($offset / $gridsystem_width);
 }
 
-/* Pull adds right padding */
+// Pull adds right padding
 @mixin pull($offset:1) {
 	padding-right: 100%*($offset / $gridsystem_width);
 }
