Removing SCSS-TO-CSS folder, adding Jimmy as author on all pages

--- a/assets/less/normalize-baseline.less
+++ b/assets/less/normalize-baseline.less
@@ -6,6 +6,8 @@
  *
  * Adapted from http://github.com/necolas/normalize.css
  *
+ * @author Abban Dunne http://abandon.ie
+ * @author James Wilson http://jimmynotjim.com
  * @version 1.0
  */
 
@@ -315,6 +317,7 @@ pre {
     white-space: pre;
     white-space: pre-wrap;
     word-wrap: break-word;
+    overflow-x:auto;
 }
 
 /*
