--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -4,7 +4,8 @@
  * Setting up a responsive grid based on Semantic GS
  *
  * @author Abban Dunne http://abandon.ie
- * @version 1.0
+ * @author James Wilson http://jimmynotjim.com
+ * @version 0.9
  */
 
 /* ========================================================== */
