--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -4,7 +4,9 @@
 // * 
 // * This is heavily infleuenced by the Semantic Grid http://semantic.gs
 // *
-// * @version 1.0
+// * @author Abban Dunne http://abandon.ie
+// * @author James Wilson http://jimmynotjim.com
+// * @version 0.9
 // *
 
 // Utility variable — you should never need to modify this
