--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,14 +1,12 @@
-/*
-* Responsable Grid System
-*
-* Setting up a responsive grid based on Semantic GS
-*
-* @author Abban Dunne http://abandon.ie
-* @version 1.0
-*
-* WARNING: This stylesheet is compiled from SCSS files located in assets/scss/ directory
-*
-*/
+// *
+// * Responsable Grid System
+// *
+// * Setting up a responsive grid based on Semantic GS
+// *
+// * @author Abban Dunne http://abandon.ie
+// * @author James Wilson http://jimmynotjim.com
+// * @version 1.0
+// */
 
 // ==========================================================
 // = Site Variables                                         =
