--- a/assets/less/grid.less
+++ b/assets/less/grid.less
@@ -52,7 +52,7 @@
 
 	display: inline;
 	float: left;
-	width: 100%*(@x / @gridsystem_width);
+	width: 100%*(@x / @columns);
 	padding: 0 @padding;
 
 	//IE 6 & 7 Fix
