--- a/assets/less/grid.less
+++ b/assets/less/grid.less
@@ -61,11 +61,11 @@
 }
 
 /* Push adds left padding */
-.push(@offset:1) {
-	padding-left: 100%*(@offset / @gridsystem_width);
+.push(@offset:1, @columns:@columns) {
+	margin-left: 100%*(@offset / @columns);
 }
 
 /* Pull adds right padding */
-.pull(@offset:1) {
-	padding-right: 100%*(@offset / @gridsystem_width);
+.pull(@offset:1, @columns:@columns) {
+	margin-right: 100%*(@offset / @columns);
 }
