--- a/assets/less/grid.less
+++ b/assets/less/grid.less
@@ -13,7 +13,7 @@
 /* Utility variable — you should never need to modify this */
 @gridsystem_width: @columns * 1px;
 @padding:$gutter_width*0.5;
-@correction: 0.5 / @max_width * 100 * 1%; // NOTE: CHeck this in IE
+@correction: 0.5 / @max_width * 100 * 1%; // NOTE: Check this in IE
 
 /* The micro clearfix http://nicolasgallagher.com/micro-clearfix-hack */
 .grid-clearfix(){
@@ -33,7 +33,7 @@
 .border-box(){
 	-webkit-box-sizing: border-box; 
 	-moz-box-sizing: border-box; 
-	box-sizing: border-box; *behavior: url(/assets/js/libs/boxsizing.htc);
+	box-sizing: border-box;
 }
 
 /* Our row container */
