--- a/assets/less/normalize-baseline.less
+++ b/assets/less/normalize-baseline.less
@@ -16,7 +16,7 @@
 *{ 
    -webkit-box-sizing: border-box; 
    -moz-box-sizing: border-box; 
-   box-sizing: border-box; *behavior: url(/assets/js/libs/boxsizing.htc);
+   box-sizing: border-box;
 }
 
 // Corrects `block` display not defined in IE6/7/8/9 & FF3.
