--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -18,7 +18,7 @@ $padding:$gutter_width*0.5;
 @mixin border-box(){
 	-webkit-box-sizing: border-box; 
 	-moz-box-sizing: border-box; 
-	box-sizing: border-box; *behavior: url(/assets/js/libs/boxsizing.htc);
+	box-sizing: border-box;
 }
 
 // Our row container
