--- a/assets/less/grid.less
+++ b/assets/less/grid.less
@@ -12,7 +12,7 @@
 
 /* Utility variable — you should never need to modify this */
 @gridsystem_width: @columns * 1px;
-@padding:$gutter_width*0.5;
+@padding: @gutter_width*0.5;
 @correction: 0.5 / @max_width * 100 * 1%; // NOTE: Check this in IE
 
 /* The micro clearfix http://nicolasgallagher.com/micro-clearfix-hack */
