--- a/assets/less/baseline.less
+++ b/assets/less/baseline.less
@@ -245,6 +245,11 @@ input[type="color"]{
     font-family:@body_family;
 }
 
+// Time element is a little weird with the extra controls
+input[type="time"]{
+	margin: 0 0 0.55em;
+}
+
 progress,
 meter{
     display:block;
