--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ select{width:100%;height:2.1em;margin-bottom:0.9em;border:1px solid #cccccc;font
 input[type="range"],input[type="color"]{vertical-align:middle;height:1.5em;width:100%;font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Sans-Serif;}
 input[type="range"]{height:1.4em;}
 input[type="color"]{width:1.5em;font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Sans-Serif;}
+input[type="time"]{margin:0 0 0.55em;}
 progress,meter{display:block;width:100%;height:1.5em;}
 input[type="submit"],input[type="button"]{border:1px solid #cccccc;background:#ddd;padding:0.7em 2em;margin:0 20px 0 0;font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Sans-Serif;line-height:1.5em;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;border-radius:3px;}
 table{margin-bottom:1.4em;width:100%;border:1px solid #cccccc;}
