--- a/assets/scss/baseline.scss
+++ b/assets/scss/baseline.scss
@@ -28,10 +28,10 @@
 html{ font-size: 100.01%; }
 
 body{
-	font-size: @baseline;
-	color: @body_color;
+	font-size: $baseline;
+	color: $body_color;
 	line-height: 1.5em;
-	font-family: @body_family;
+	font-family: $body_family;
 
 	// Optional type aliasing
 	text-shadow: 0 -1px 1px rgba(255, 255, 255, 0.01);
@@ -44,12 +44,12 @@ body{
 // ========================================================== */
 
 ::selection{
-	background: @select;
-	color: @select_color;
+	background: $select;
+	color: $select_color;
 }
 ::-moz-selection{
-	background: @select;
-	color: @select_color;
+	background: $select;
+	color: $select_color;
 }
 img::selection{
 	background: transparent;
@@ -58,7 +58,7 @@ img::-moz-selection{
 	background: transparent;
 }
 body{
-	-webkit-tap-highlight-color: @select;
+	-webkit-tap-highlight-color: $select;
 }
 
 // ========================================================== */
@@ -66,10 +66,10 @@ body{
 // ========================================================== */
 
 a{
-	color:@link;
+	color:$link;
 
 	&:hover, &:focus{
-	    color: @link_hover;
+	    color: $link_hover;
 	}
 
 	// Optional transition
@@ -86,8 +86,8 @@ a{
 
 h1,h2,h3,h4,h5,h6{
 	margin-top:0;
-    font-family: @heading_family;
-    color: @heading_color;
+    font-family: $heading_family;
+    color: $heading_color;
 }
 
 h1{
@@ -140,7 +140,7 @@ figure img{
 figcaption{
     font-size: small;
     font-style:italic;
-    color:@grey_dark;
+    color:$grey_dark;
 }
 
 // ========================================================== */
@@ -215,17 +215,17 @@ textarea{
     width: 100%;
     margin:0 0 0.75em;
     padding: 0.3em;
-    border:1px solid @grey_regular;
+    border:1px solid $grey_regular;
     line-height: 1.5em;
-    font-family:@body_family;
+    font-family:$body_family;
 }
 
 select{
     width: 100%;
     height: 2.1em;
     margin-bottom: 0.9em;
-    border:1px solid @grey_regular;
-    font-family:@body_family;
+    border:1px solid $grey_regular;
+    font-family:$body_family;
 }
 
 input[type="range"],
@@ -233,7 +233,7 @@ input[type="color"]{
     vertical-align: middle;
     height: 1.5em;
     width: 100%;
-    font-family: @body_family;
+    font-family: $body_family;
 }
 
 input[type="range"]{
@@ -242,7 +242,7 @@ input[type="range"]{
 
 input[type="color"]{
     width: 1.5em;
-    font-family:@body_family;
+    font-family:$body_family;
 }
 
 // Time element is a little weird with the extra controls
@@ -259,11 +259,11 @@ meter{
 
 input[type="submit"],
 input[type="button"]{
-    border:1px solid @grey_regular;
+    border:1px solid $grey_regular;
     background:#ddd;
     padding: 0.7em 2em;
     margin:0 20px 0 0;
-    font-family:@body_family;
+    font-family:$body_family;
     line-height: 1.5em;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -278,7 +278,7 @@ input[type="button"]{
 table {
     margin-bottom: 1.4em;
     width:100%;
-    border: 1px solid @grey_regular;
+    border: 1px solid $grey_regular;
 }
 
 thead{
@@ -288,7 +288,7 @@ thead{
 
 tbody{
     tr:nth-child(even) td{
-        background: @grey_light;
+        background: $grey_light;
     }
 }
 
@@ -300,7 +300,7 @@ tfoot{
 }
 
 th,td,caption{
-    border: 1px solid @grey_regular;
+    border: 1px solid $grey_regular;
 }
 
 td, th{
@@ -331,12 +331,12 @@ blockquote{
 
 mark{
     line-height: 1.5;
-    background: @select;
-    color: @select_color;
+    background: $select;
+    color: $select_color;
 }
 
 del{
-    color:@grey_light;
+    color:$grey_light;
 }
 
 code,
@@ -359,8 +359,8 @@ samp{
 }
 
 hr {
-    background: @grey_regular;
-    color: @grey_regular;
+    background: $grey_regular;
+    color: $grey_regular;
     clear: both;
     float: none;
     width: 100%;
