--- a/assets/less/baseline.less
+++ b/assets/less/baseline.less
@@ -1,14 +1,12 @@
 /**
- * Normalize with Baseline Grid
+ * Baseline Grid to be layered on Normalize
  *
  * Makes elements consistent across browsers, sets up some decent
  * default css styles and a baseline grid.
  *
- * Adapted from http://github.com/necolas/normalize.css
- *
  * @author Abban Dunne http://abandon.ie
  * @author James Wilson http://jimmynotjim.com
- * @version 1.0
+ * @version 1.1
  */
 
 /* ========================================================== */
