Changing grid-clearfix to just clearfix

--- a/assets/less/baseline.less
+++ b/assets/less/baseline.less
@@ -164,7 +164,7 @@ form ul{
     margin:0;
     padding:0;
     li{
-        .grid-clearfix();
+        .clearfix();
         margin-bottom:1.5em;
     }
 }
