--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -79,7 +79,7 @@ header#worlds_birth{
 			//margin-bottom: 2px; // Figure out 2px weirdness with hgroups
 		}
 		nav ul{
-			.grid-clearfix();
+			.clearfix();
 			.column(12);
 			margin-bottom: 1.5em;
 			text-align: center;
