--- a/assets/scss/baseline.scss
+++ b/assets/scss/baseline.scss
@@ -164,7 +164,7 @@ form ul{
     margin:0;
     padding:0;
     li{
-        .grid-clearfix();
+        .clearfix();
         margin-bottom:1.5em;
     }
 }
