Adding max_width variable

--- a/less/responsable.less
+++ b/less/responsable.less
@@ -11,6 +11,7 @@
 
 @columns: 12;
 @gutter_width: 24px;
+@max_width: 1024px;
 
 // Utility variable — you should never need to modify this
 @gridsystem_width: @columns * 1px;
