--- a/scss/responsable.scss
+++ b/scss/responsable.scss
@@ -11,6 +11,7 @@
 
 $columns: 12 !default;
 $gutter_width: 24px !default;
+$max_width: 1024px !default;
 
 // Utility variable — you should never need to modify this
 $gridsystem_width: $columns * 1px;
