Adding site alignment option

--- a/less/responsable.less
+++ b/less/responsable.less
@@ -1,6 +1,8 @@
 /**
  * Responsable Grid System (Super tiny huh!?)
  *
+ * THIS VERSION IS NO LONGER SUPPORTED USE THE SCSS VERSION FROM 2.0.0 ONWARDS
+ * 
  * @author Abban Dunne http://abandon.ie
  * @author James Wilson http://jimmynotjim.com
  * @version 2.0.0
